<resources>
    <string name="app_name">Ghayrat Samiev</string>
    <string name="addition"> 5 + 10 = </string>
    <string name="answer">answer</string>
    <string name="incorrectTextMessage">Sorry the answer is not correct</string>
    <string name="hint_answer">Input answer:</string>
    <string name="correct_answer">Congratulations. The answer is correct</string>
    <string name="delete_map_label">Delete Map</string>
    <string name="wardriving_label">Wardriving</string>
    <string name="localization_label">Localization</string>
    <string name="upload_map_label">Upload Map</string>
    <string name="add_new_wifi_data_label">Add new Wifi data</string>
    <string name="delete_wifi_data_label">Delete data</string>
    <string name="see_the_data_label">See the data</string>
    <string name="cancel_label">Cancel</string>
    <string name="saved_aps">Saved APs</string>
    <string name="go_back_bool_label">Would you like to go back</string>
    <string name="_yes">Yes</string>
    <string name="_no">No</string>
    <string name="what_would_you_like">What would you like to do for this location?</string>
    <string name="scan_or_not">What would like to scan?</string>
</resources>