<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="5dp"
    android:paddingBottom="20dp">


    <Button
        android:id="@+id/delete_data"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="120dp"
        android:includeFontPadding="false"
        android:text="@string/delete_wifi_data_label"
        android:textAllCaps="false"
        android:textSize="14dp"

        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/see_the_data"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="160dp"
        android:includeFontPadding="false"
        android:text="@string/see_the_data_label"
        android:textAllCaps="false"
        android:textSize="14dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/see_the_data2"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="160dp"
        android:includeFontPadding="false"
        android:text="@string/see_the_data_label"
        android:textAllCaps="false"
        android:textSize="14dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/add_new_wifi"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:includeFontPadding="false"
        android:shadowColor="#FFFFFF"
        android:text="@string/add_new_wifi_data_label"
        android:textAllCaps="false"
        android:textSize="14dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.331" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="204dp"
        android:includeFontPadding="false"
        android:text="@string/cancel_label"
        android:textAllCaps="false"
        android:textSize="14dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/what_would_you_like"
        android:textAlignment="center"

        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--    <View-->
    <!--        android:id="@+id/divider"-->
    <!--        android:layout_width="1dp"-->
    <!--        android:layout_height="0dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textView2" />-->
</androidx.constraintlayout.widget.ConstraintLayout>