<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="5dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/would_you_like_to_scan_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/scan_or_not"
        android:textAlignment="center"

        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/scan_yes"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="64dp"
        android:includeFontPadding="false"
        android:text="@string/_yes"
        android:textAllCaps="false"
        android:textSize="14dp"

        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/scan_no"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="104dp"
        android:includeFontPadding="false"
        android:text="@string/_no"
        android:textAllCaps="false"
        android:textSize="14dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <!--    <View-->
    <!--        android:id="@+id/divider"-->
    <!--        android:layout_width="1dp"-->
    <!--        android:layout_height="0dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textView2" />-->
</androidx.constraintlayout.widget.ConstraintLayout>